@@ -4,10 +4,15 @@
 1.8.1 update 6 vs. 1.8.1 update 5
 
    3 Enhancements
-   0 Bugfix
+   1 Bugfix
 
 ----------------------------------------------------------------------
 1.8.1 update 6
+
+  Bug fixes:
+
+  - Windows: project's absolute paths are displayed with /
+  http://sourceforge.net/support/tracker.php?aid=2826624
 
   Other enhancements:
   
